# financialtools

./: .gitignore  AI_results_1y.xlsx  AI_results_4y.xlsx  AI_results_4y_norf.xlsx  CLAUDE.md  README.md  analyze_data.py  analyze_fin_data.py  app.py  architecture.md  ask_assistant.py  bAI_results.xlsx  batch_job_results_tickers.jsonl  batch_tasks_tickers.jsonl  chains.py  chatcompetion.py  coding-rules.md  create_batch_files.py  create_multi_agents.md  debugging-rules.md  demo_app.ipynb  down_fin_data3.py  download_data.py  download_fin_data.py  download_other_data.py  fa_trader_assistant copy.ipynb  financialtools_findings_plan.md  metrics_sectors.ipynb  open_ai_api_pricing.xlsx  processor_guide_findings_plan.md  prova.ipynb  pyproject.toml  quantum_analysis.ipynb  read_batch_files.py  reading output.ipynb  requirements.txt  retrieve_batch_results.py  tools.py
agents/: AGENTS.md  __init__.py  _cache.py  _subagents.py  financial_agent.py  graph_nodes.py  graph_state.py
docs/: architecture-refactor-plan.md  code-review-report.md  dx-audit.md  extend_metrics_plan.md  issue-tracker.md
financial_data/: AAPL_info.parquet  AAPL_merged_data.parquet  AMZN_info.parquet  AMZN_merged_data.parquet  GOOGL_info.parquet  GOOGL_merged_data.parquet  MSFT_info.parquet  MSFT_merged_data.parquet  NVDA_info.parquet  NVDA_merged_data.parquet  composite_scores.xlsx  eval_metrics.xlsx  eval_metrics_by_sectors.xlsx  financial_data.xlsx  financial_data_prova_logs.xlsx  metrics.xlsx  metrics_by_sectors.xlsx  raw_red_flags.xlsx  red_flags.xlsx
financialtools/: __init__.py  analysis.py  chains.py  config.py  downloader.py  evaluator.py  exceptions.py  processor.py  prompts.py  pydantic_models.py  tools.py  utils.py  wrappers.py
notebooks/: chains_guide.ipynb  langchain_guide.ipynb  processor_guide.ipynb  utils_guide.ipynb  wrappers_guide.ipynb
old/: batch_job_results_tickers.jsonl  batch_job_results_tickers_four_years.xlsx  batch_job_results_tickers_nopostpone.jsonl  batch_job_results_tickers_nopostpone.xlsx  batch_job_results_tickers_nopostpone_1year.jsonl  batch_job_results_tickers_nopostpone_1year.xlsx  batch_tasks_tickers.jsonl  create_batch_files.py  financial_data.xlsx  prova.py  prova1anno.py  prova_data.xlsx  raw_red_flags.xlsx
scripts/: demo_financial_manager.py  run_agent.py  (+4 more)
(+24 files in other folders)
