[project]
name = "financialtools"
version = "0.1.0"
description = "A package for processing financial data"
authors = [{ name = "Luigi", email = "luigi@example.com" }]
readme = "README.md"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "requests>=2.28",
    "yfinance>=0.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"