[project]
name = "financialtools"
version = "0.1.0"
description = "A package for processing financial data"
authors = [{ name = "Luigi", email = "luigi@example.com" }]
readme = "README.md"
dependencies = [
    "kitai>=0.1",
    "langchain>=1.2",
    "langchain-community>=0.4",
    "langchain-core>=1.3",
    "langchain-openai>=1.2",
    "langgraph>=1.1",
    "numpy>=2.3",
    "openai>=2.29",
    "pandas>=2.3",
    "pydantic>=2.11",
    "python-dotenv>=1.1",
    "rich>=14.1",
    "streamlit>=1.48",
    "typing-extensions>=4.14",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "mypy",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly include only your package folder
packages = ["financialtools"]

[tool.setuptools.package-data]
# If you have specific non-python files inside 'financialtools' to include
# "*" = ["*.json", "*.txt"]